# LearnQtOpenGL

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/1.getting_started/2.1.hello_triangle/: triangle.frag  triangle.vert  widget.cpp  widget.h
src/1.getting_started/2.2.hello_triangle_indexed/: res.qrc  widget.cpp  widget.h
src/1.getting_started/3.1.shaders_uniform/: triangle.frag  widget.cpp  widget.h
src/1.getting_started/3.2.shaders_interpolation/: mainwindow.cpp  mainwindow.h  triangle.frag  triangle.vert  widget.cpp
src/1.getting_started/3.4.widget_in_mainwindow/: triangle.vert  widget.cpp
src/1.getting_started/4.1.texture/: mainwindow.ui  triangle.frag  triangle.vert  widget.cpp  widget.h
src/1.getting_started/5.1.transformations/: mainwindow.h  triangle.vert  widget.cpp
src/1.getting_started/6.1.coordinate_systems/: triangle.vert  widget.cpp  widget.h
src/1.getting_started/6.1.coordinate_systems_multiple/: widget.cpp
src/1.getting_started/7.1.camera/: widget.cpp
src/1.getting_started/7.1.camera_keyboard/: triangle.frag  widget.cpp  widget.h
src/1.getting_started/7.1.camera_keyboard_mouse/: mainwindow.cpp  widget.cpp  widget.h
src/2.lighting/1.colors/: res.qrc  triangle.frag  widget.cpp  widget.h
src/2.lighting/2.phone_lighting_model/: triangle.frag  triangle.vert  widget.cpp
src/2.lighting/3.materials/: mainwindow.cpp  triangle.frag  widget.cpp
src/2.lighting/4.lighting_map/: triangle.frag  triangle.vert  widget.cpp  widget.h
src/2.lighting/5.lighting_caster/: lightcube.vert  triangle.frag  widget.cpp
src/2.lighting/6.lighting_caster_point/: res.qrc  triangle.frag  widget.cpp
src/2.lighting/7.lighting_caster_spot/: lightcube.frag  triangle.frag  widget.cpp
src/2.lighting/8.multiple_lights/: triangle.frag  widget.cpp
src/3.model_loading/1.model_loading/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  model.cpp  model.h  model_loading.frag  model_loading.vert  res.qrc  widget.cpp  widget.h
